# himena-bio

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/himena_bio/: _func.py  _utils.py  consts.py  io.py
src/himena_bio/tools/: __init__.py  _cast.py  _hint.py  align.py  misc.py  translate.py
src/himena_bio/widgets/: __init__.py  _base.py  _editor_actions.py  _editor_control.py  _editor_finder.py  _feature_view.py  ab1.py  alignment.py  editor.py
src/himena_plasmid_editor/: _utils.py  consts.py  io.py
src/himena_plasmid_editor/tools/: __init__.py  misc.py
src/himena_plasmid_editor/widgets/: __init__.py  _feature_view.py  editor.py
tests/: test_algorithms.py  test_pcr.py  test_widget.py
